# galaga

./: CMakeLists.txt  Makefile  README.md
include/: Bullet.hpp  CFG.hpp  Core.hpp  Elements.hpp  Formations.hpp  Game.hpp  LevelsElement.hpp  Music.hpp  Objects.hpp  Patterns.hpp  Resources.hpp  Rocket.hpp  Ship.hpp  StageM.hpp  Text.hpp  header.hpp  physix.hpp  shapes.hpp  stages.hpp  starsField.hpp  texture.hpp  timer.hpp
include/glad/: glad.h
src/: Bullet.cpp  CFG.cpp  Core.cpp  Elements.cpp  Formations.cpp  Game.cpp  LevelsElement.cpp  Music.cpp  Objects.cpp  Patterns.cpp  Resources.cpp  Rocket.cpp  Ship.cpp  StageM.cpp  Text.cpp  glad.c  main.cpp  physix.cpp  shapes.cpp  stages.cpp  starsField.cpp  texture.cpp  timer.cpp
